@@ -1,4 +1,7 @@
 Version 1.13.11+dev:
+ * Add-ons server:
+   * Added support for adding free-form comma-separated tags to add-ons in
+     their publishing info (bug #2565).
  * Language and i18n:
    * Updated translations: British English, Spanish
  * Lua API:
